feat: 网关添加 Directive