@@ -1,13 +1,17 @@
 package net.asany.jfantasy.framework.security.authentication;
 
-import java.util.ArrayList;
-import java.util.Collection;
-import java.util.Collections;
 import lombok.Data;
 import net.asany.jfantasy.framework.security.core.GrantedAuthority;
 import net.asany.jfantasy.framework.security.core.authority.AuthorityUtils;
 
+import java.util.Collection;
+import java.util.List;
+
 /**
+ * 抽象身份验证令牌
+ * <p>
+ * 该类实现了 Authentication 接口，提供了 Authentication 接口的基本实现。
+ *
  * @author limaofeng
  */
 @Data
@@ -22,6 +26,6 @@ public abstract class AbstractAuthenticationToken implements Authentication {
       this.authorities = AuthorityUtils.NO_AUTHORITIES;
       return;
     }
-    this.authorities = Collections.unmodifiableList(new ArrayList<>(authorities));
+    this.authorities = List.copyOf(authorities);
   }
 }
